--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,77 @@
+# https://github.com/github/gitignore
+
+# COMPILED SOURCE #
+###################
+
+*.class
+*.com
+*.dll
+*.exe
+*.o
+*.py[cdo]
+*.so
+
+# PACKAGES #
+############
+
+*.7z
+*.dmg
+*.egg*
+*.gz
+*.iso
+*.jar
+*.rar
+*.tar
+*.zip
+
+# LOGS AND DATABASES #
+######################
+
+*.log
+*.sql
+*.sqlite
+*.db
+
+# OS GENERATED FILES #
+######################
+
+._*
 .DS_Store
-applet
-application.linux32
-application.linux64
-application.windows32
-application.windows64
-application.macosx
+.DS_Store?
+.Spotlight-V100
+.Trashes
+Desktop.ini
+ehthumbs.db
+Icon^M^M
+Thumbs.db
+
+# EDITORS #
+###########
+
+*.sublime-workspace
+*.swo
+*.swp
+*~
+.\#*
+.elc
+.project
+.pydevproject
+.settings
+/.emacs.desktop
+/.emacs.desktop.lock
+\#*\#
+auto-save-list
+tramp
+
+# MISCELLANEOUS #
+#################
+
+*.bak
+.cvs
+.svn
+sitemap.xml.gz*~
+
+# PROJECT-SPECIFIC #
+####################
+_notes
+bower_components
